[gd_scene load_steps=6 format=3 uid="uid://cwa2cv6lsgki6"]

[ext_resource type="Script" uid="uid://bsq0s24t8b4cj" path="res://systems/settings_system/sound_setter.gd" id="1_wvucb"]
[ext_resource type="AudioStream" uid="uid://d1j7xlb6utcoj" path="res://systems/settings_system/beep 2.wav" id="2_otl65"]

[sub_resource type="Animation" id="Animation_fo8gr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}

[sub_resource type="Animation" id="Animation_8n614"]
resource_name = "auto_play"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8o6xe"]
_data = {
&"RESET": SubResource("Animation_fo8gr"),
&"auto_play": SubResource("Animation_8n614")
}

[node name="SoundSetter" type="ColorRect"]
custom_minimum_size = Vector2(0, 72)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -36.0
offset_right = -177.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color(0.294118, 0.329412, 1, 1)
script = ExtResource("1_wvucb")

[node name="Layout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MuteButton" type="CheckButton" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.5
step = 0.02
value = 0.48

[node name="ExampleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_otl65")
volume_db = -80.0

[node name="MuteOnLoad" type="AnimationPlayer" parent="ExampleSound"]
libraries = {
"": SubResource("AnimationLibrary_8o6xe")
}
autoplay = "auto_play"

[node name="Title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Derp"
horizontal_alignment = 1

[connection signal="toggled" from="Layout/MuteButton" to="." method="_on_mute_button_toggled"]
[connection signal="value_changed" from="Layout/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
